--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -178,6 +178,7 @@ allow 154.213.184.9;
 allow 154.213.184.90;
 allow 154.213.184.93;
 allow 154.213.185.133;
+allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
@@ -291,7 +292,6 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
-allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.107.57.64;
 allow 185.107.57.65;
@@ -571,6 +571,7 @@ allow 185.40.4.95;
 allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
+allow 185.66.88.14;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
@@ -1275,6 +1276,7 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1619,7 +1621,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
