--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -25,7 +25,6 @@ set_real_ip_from 2001:4ba0:fff8:120::1;
 set_real_ip_from 2001:620:20d0::23;
 set_real_ip_from 2001:620:20d0::24;
 set_real_ip_from 2001:638:301:f732::150;
-set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
@@ -145,6 +144,7 @@ set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:a880:400:d0::28:6001;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
+set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -715,4 +715,3 @@ set_real_ip_from 2a12:dd47:8513::d;
 set_real_ip_from 2a12:dd47:8513::e;
 set_real_ip_from 2a12:dd47:8513::f;
 set_real_ip_from 2a13:d207:0:461::1;
-set_real_ip_from 2a14:3f80:5000::40;
