--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -695,7 +695,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -756,6 +756,7 @@ allow 2001:4ba0:fff8:120::1;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
+allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -976,6 +977,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.173.216.67;
 allow 23.184.48.48;
 allow 23.224.49.114;
@@ -1005,6 +1007,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
@@ -1617,6 +1620,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1655,6 +1660,7 @@ allow 45.14.165.118;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.154.98.26;
+allow 45.59.112.103;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1830,6 +1836,8 @@ allow 91.193.18.63;
 allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
+allow 91.206.26.26;
+allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
 allow 91.208.75.239;
