--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -25,6 +25,7 @@ deny 2001:4ba0:fff8:120::1;
 deny 2001:620:20d0::23;
 deny 2001:620:20d0::24;
 deny 2001:638:301:f732::150;
+deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
 deny 2001:67c:289c:2::234;
@@ -125,6 +126,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:3f11:39ca:318:0:1;
 deny 2602:fc24:12:4870:39ca:318:0:1;
