--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -178,6 +178,7 @@ allow 154.213.184.9;
 allow 154.213.184.90;
 allow 154.213.184.93;
 allow 154.213.185.133;
+allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
@@ -200,7 +201,6 @@ allow 154.216.19.230;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -675,7 +675,6 @@ allow 193.239.232.102;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.36.132.21;
-allow 193.36.38.17;
 allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
@@ -875,6 +874,7 @@ allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.60.219;
 allow 209.141.62.71;
+allow 211.106.162.161;
 allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
@@ -950,7 +950,6 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
-allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1269,6 +1268,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1276,6 +1276,7 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1619,6 +1620,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1717,6 +1719,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1793,6 +1796,7 @@ allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.247.165.51;
