--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -178,6 +178,7 @@ set_real_ip_from 154.213.184.9;
 set_real_ip_from 154.213.184.90;
 set_real_ip_from 154.213.184.93;
 set_real_ip_from 154.213.185.133;
+set_real_ip_from 154.213.185.165;
 set_real_ip_from 154.213.185.183;
 set_real_ip_from 154.213.185.185;
 set_real_ip_from 154.213.185.230;
@@ -200,7 +201,6 @@ set_real_ip_from 154.216.19.230;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 158.69.1.13;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 161.97.174.64;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
@@ -675,7 +675,6 @@ set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.36.132.21;
-set_real_ip_from 193.36.38.17;
 set_real_ip_from 193.70.80.213;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
@@ -875,6 +874,7 @@ set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.60.219;
 set_real_ip_from 209.141.62.71;
+set_real_ip_from 211.106.162.161;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
@@ -950,7 +950,6 @@ set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
-set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
@@ -1269,6 +1268,7 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:d285::1;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1276,6 +1276,7 @@ set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
+set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
@@ -1619,6 +1620,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
 set_real_ip_from 45.129.84.247;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1717,6 +1719,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1793,6 +1796,7 @@ set_real_ip_from 82.68.49.227;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
