--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -325,6 +325,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -974,6 +975,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
@@ -1502,6 +1504,7 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1618,7 +1621,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.249;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1796,6 +1799,7 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
+allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.252.120.163;
@@ -1820,6 +1824,7 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.187.143.31;
+allow 89.213.174.212;
 allow 89.221.217.206;
 allow 89.234.157.254;
 allow 89.236.112.100;
